--- a/manifests/grafana-operator/grafana.yaml
+++ b/manifests/grafana-operator/grafana.yaml
@@ -2,6 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: Grafana
 metadata:
   name: grafana
+  namespace: monitoring
   labels:
     dashboards: "grafana"
 spec:
