--- a/manifests/grafana-operator/grafana.yaml
+++ b/manifests/grafana-operator/grafana.yaml
@@ -19,6 +19,9 @@ spec:
     auth:
       disable_login_form: "false"
   deployment:
+    envFrom:
+      - secretRef:
+        name: grafana-env
     spec:
       template:
         spec:
