chore: Update grafana.yaml to include envFrom secretRef for Grafana container
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/manifests/grafana-operator/grafana.yaml
+++ b/manifests/grafana-operator/grafana.yaml
@@ -24,9 +24,6 @@ spec:
         spec:
           containers:
             - name: grafana
-              envFrom:
-                - secretRef:
-                  name: grafana-env
               env:
                 - name: GF_SECURITY_ADMIN_USER
                   valueFrom:
@@ -38,6 +35,11 @@ spec:
                     secretKeyRef:
                       key: GF_SECURITY_ADMIN_PASSWORD
                       name: grafana-credentials
+                - name: GF_INSTALL_PLUGINS
+                  valueFrom:
+                    secretKeyRef:
+                      key: GF_INSTALL_PLUGINS
+                      name: grafana-env
   ingress:
     metadata:
       annotations:
