--- a/argocd/infra/system-upgrade-controller.yaml
+++ b/argocd/infra/system-upgrade-controller.yaml
@@ -13,7 +13,7 @@ spec:
   sources:
     - repoURL: "https://github.com/rancher/system-upgrade-controller"
       targetRevision: v0.13.4
-      path: "manifests/system-upgrade-controller.yaml"
+      path: "manifests"
   syncPolicy:
     automated:
       prune: true
