--- a/argocd/infra/system-upgrade-controller.yaml
+++ b/argocd/infra/system-upgrade-controller.yaml
@@ -14,6 +14,8 @@ spec:
     - repoURL: "https://github.com/rancher/system-upgrade-controller"
       targetRevision: v0.13.4
       path: "manifests"
+      directory:
+        include: system-upgrade-controller.yaml
   syncPolicy:
     automated:
       prune: true
