chore: Update DNS configuration to use 'cali' domain instead of 'home'
The DNS configuration has been updated to use the 'cali' domain instead of the 'home' domain for the Kubernetes cluster.

Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -29,11 +29,11 @@ spec:
               traefik.ingress.kubernetes.io/router.entrypoints: websecure
               cert-manager.io/cluster-issuer: cloudflare-issuer
             hosts:
-              - "vm.k8s.home.lex.la"
+              - "vm.k8s.cali.lex.la"
             tls:
               - secretName: vm-tls
                 hosts:
-                  - vm.k8s.home.lex.la
+                  - vm.k8s.cali.lex.la
   syncPolicy:
     automated:
       prune: true
