--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -20,7 +20,7 @@ spec:
           secretName: tunnel-credentials
           tunnelName: k8s-expose
           ingress:
-            - service: http://traefik.traefik-system.svc.k8s.home.lex.la:8080
+            - service: http://traefik.traefik-system.svc.k8s.cali.lex.la:8080
           enableDefault404: false
         replicaCount: 1
   syncPolicy:
