chore: Update system-upgrade-controller.yaml to use manifests directory
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/infra/system-upgrade-controller.yaml
+++ b/argocd/infra/system-upgrade-controller.yaml
@@ -16,6 +16,9 @@ spec:
       path: "manifests"
       directory:
         include: system-upgrade-controller.yaml
+    - path: manifests/system-upgrade-controller
+      repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
