chore: Add persistent volume claim for Grafana data
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/manifests/grafana-operator/grafana.yaml
+++ b/manifests/grafana-operator/grafana.yaml
@@ -36,6 +36,10 @@ spec:
                     secretKeyRef:
                       key: GF_SECURITY_ADMIN_PASSWORD
                       name: grafana-credentials
+          volumes:
+            - name: grafana-data
+              persistentVolumeClaim:
+                claimName: grafana-pvc
   ingress:
     metadata:
       annotations:
