chore: Update grafana image to version 10.4.3 and add security context
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/manifests/grafana-operator/grafana.yaml
+++ b/manifests/grafana-operator/grafana.yaml
@@ -25,6 +25,12 @@ spec:
         spec:
           containers:
             - name: grafana
+              image: docker.io/grafana/grafana:10.4.3
+              securityContext:
+                allowPrivilegeEscalation: true
+                readOnlyRootFilesystem: false
+              readinessProbe:
+                failureThreshold: 3
               env:
                 - name: GF_SECURITY_ADMIN_USER
                   valueFrom:
