chore: Update deployment strategy to Recreate in grafana.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/manifests/grafana-operator/grafana.yaml
+++ b/manifests/grafana-operator/grafana.yaml
@@ -13,6 +13,8 @@ spec:
       disable_login_form: "false"
   deployment:
     spec:
+      strategy:
+        type: Recreate
       template:
         spec:
           containers:
