chore: Update Loki datasource URL in loki-datasource.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/manifests/grafana-operator/loki-datasource.yaml
+++ b/manifests/grafana-operator/loki-datasource.yaml
@@ -11,4 +11,4 @@ spec:
     name: Loki
     type: loki
     access: proxy
-    url: "http://loki-stack.monitoring.svc.k8s.cali.lex.la:3100"
+    url: "http://loki-stack.monitoring.svc:3100"
