--- a/argocd/infra/csi-driver-nfs.yaml
+++ b/argocd/infra/csi-driver-nfs.yaml
@@ -9,10 +9,13 @@ spec:
   destination:
     namespace: kube-system
     server: "https://kubernetes.default.svc"
-  source:
-    repoURL: "https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts"
-    targetRevision: "v4.6.0"
-    chart: csi-driver-nfs
+  sources:
+    - repoURL: "https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts"
+      targetRevision: "v4.6.0"
+      chart: csi-driver-nfs
+    - path: manifests/csi-driver-nfs
+      repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
   project: default
   syncPolicy:
     automated:
