feat(homeassistant): rename ArgoCD application from coredns to homeassistant
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/smarthome/homeassistant.yaml
+++ b/argocd/smarthome/homeassistant.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: coredns
+  name: homeassistant
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
