feat(homeassistant): add TLS configuration for Home Assistant ingress
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/ingress.yaml
+++ b/manifests/homeassistant/ingress.yaml
@@ -16,3 +16,7 @@ spec:
                 name: ha-service
                 port:
                   number: 8123
+  tls:
+    - hosts:
+        - ha.lex.la
+      secretName: ha-tls
