--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -38,7 +38,7 @@ spec:
           ingressRoute:
             dashboard:
               enabled: true
-              matchRule: Host(`traefik.k8s.cali.lex.la`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+              matchRule: Host(`traefik.lex.la`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
               entryPoints:
                 - websecure
               tls:
