feat(traefik): update service annotation to use metallb for IP allocation
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -18,7 +18,7 @@ spec:
         valuesObject:
           service:
             annotations:
-              traefik.universe.tf/address-pool: ingress-pool
+              metallb.io/ip-allocated-from-pool: ingress-pool
           additionalArguments:
             # Disable internal ssl check
             - "--serversTransport.insecureSkipVerify=true"
