--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -18,7 +18,7 @@ spec:
         valuesObject:
           service:
             annotations:
-              metallb.io/ip-allocated-from-pool: ingress-pool
+              metallb.universe.tf/address-pool: ingress-pool
           additionalArguments:
             # Disable internal ssl check
             - "--serversTransport.insecureSkipVerify=true"
