--- a/manifests/homeassistant/ingress.yaml
+++ b/manifests/homeassistant/ingress.yaml
@@ -1,22 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ha-ingress
+  name: ha-service
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: tunnel
 spec:
+  ingressClassName: traefik
   rules:
-    - host: ha.lex.la
+    - host: aleksei.sviridk.in
       http:
         paths:
-          - path: /
-            pathType: Prefix
-            backend:
+          - backend:
               service:
                 name: ha-service
                 port:
                   number: 8123
-  tls:
-    - hosts:
-        - ha.lex.la
-      secretName: ha-tls
+            path: /
+            pathType: Prefix
