--- a/manifests/homeassistant/ingress.yaml
+++ b/manifests/homeassistant/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: aleksei.sviridk.in
+    - host: ha.lex.la
       http:
         paths:
           - backend:
