feat(homeassistant): update service port to use named port 'http'
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/ingress.yaml
+++ b/manifests/homeassistant/ingress.yaml
@@ -14,6 +14,6 @@ spec:
               service:
                 name: ha-service
                 port:
-                  number: 8123
+                  name: http
             path: /
             pathType: Prefix
