feat(homeassistant): revert ingress host to ha.lex.la
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/ingress.yaml
+++ b/manifests/homeassistant/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: ha.home.lex.la
+    - host: ha.lex.la
       http:
         paths:
           - backend:
