feat(dns): update DNS entries from cali.lex.la to home.lex.la
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd-disabled/longhorn.yaml
+++ b/argocd-disabled/longhorn.yaml
@@ -21,7 +21,7 @@ spec:
           defaultClass: true
         ingress:
           enabled: true
-          host: longhorn.k8s.cali.lex.la
+          host: longhorn.k8s.home.lex.la
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
             cert-manager.io/cluster-issuer: "cloudflare-issuer"
