--- a/manifests/homeassistant/ingress-home.yaml
+++ b/manifests/homeassistant/ingress-home.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ha-service
+  name: ha-home-service
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: tunnel
 spec:
