--- a/manifests/homeassistant/ingress-home.yaml
+++ b/manifests/homeassistant/ingress-home.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ha-home-service
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: tunnel
+    cert-manager.io/cluster-issuer: "cloudflare-issuer"
 spec:
   ingressClassName: traefik
   rules:
