feat(homeassistant): update ingress entrypoint to websecure
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/ingress-home.yaml
+++ b/manifests/homeassistant/ingress-home.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ha-home-service
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: tunnel
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     cert-manager.io/cluster-issuer: "cloudflare-issuer"
 spec:
   ingressClassName: traefik
