Revert "feat(traefik): remove unused traefik certificate manifest and related configuration"
This reverts commit 966d675e096e38989af18ab57e624cce37e3f0c8.

--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -51,6 +51,9 @@ spec:
             kubernetesIngress:
               publishedService:
                 enabled: true
+    - path: manifests/traefik
+      repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
