feat(traefik): simplify TLS configuration in traefik.yaml
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -44,9 +44,7 @@ spec:
               entryPoints:
                 - websecure
               tls:
-                - secretName: traefik-tls-secret
-                  hosts:
-                    - traefik.k8s.home.lex.la
+                secretName: traefik-tls-secret
           providers:
             kubernetesIngress:
               publishedService:
