feat(traefik): enable kubernetesGateway in traefik.yaml
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -49,9 +49,13 @@ spec:
             kubernetesIngress:
               publishedService:
                 enabled: true
+            kubernetesGateway:
+              enabled: true
+
     - path: manifests/traefik
       repoURL: https://github.com/lexfrei/k8s.git
       targetRevision: HEAD
+
   syncPolicy:
     automated:
       prune: true
