refactor(homeassistant): clean up configmap.yaml by removing commented lines and simplifying trusted_proxies
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/configmap.yaml
+++ b/manifests/homeassistant/configmap.yaml
@@ -7,7 +7,6 @@ data:
     # Loads default set of integrations. Do not remove.
     default_config:
 
-    # Основные настройки Home Assistant
     homeassistant:
       name: "My Home"
       latitude: 43.5855
@@ -27,11 +26,9 @@ data:
     script: !include scripts.yaml
     scene: !include scenes.yaml
 
-    # HTTP + реверс-прокси
     http:
       use_x_forwarded_for: true
-      trusted_proxies:
-        - 10.42.0.0/16
+      trusted_proxies: 10.42.0.0/16
 
     logger:
       default: info
