--- a/manifests/homeassistant/configmap.yaml
+++ b/manifests/homeassistant/configmap.yaml
@@ -15,3 +15,8 @@ data:
     automation: !include automations.yaml
     script: !include scripts.yaml
     scene: !include scenes.yaml
+
+    http:
+      use_x_forwarded_for: true
+      trusted_proxies:
+        - 0.0.0.0/0
