--- a/manifests/transmission/deploymant.yaml
+++ b/manifests/transmission/deploymant.yaml
@@ -36,5 +36,5 @@ spec:
             claimName: transmission-config-pvc
         - name: downloads
           nfs:
-            server: 172.16.69.3
+            server: nas.home.lex.la
             path: /nfs/Transmission
