feat(renovate): add Kubernetes file matching for YAML files in Renovate configuration
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -33,6 +33,11 @@
             "github-actions"
         ]
     },
+    "kubernetes": {
+        "fileMatch": [
+            "\\.yaml$"
+        ]
+    },
     "automerge": true,
     "prHourlyLimit": 5,
     "prConcurrentLimit": 10
