--- a/manifests/transmission/ingress.yaml
+++ b/manifests/transmission/ingress.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: transmission
-  namespace: default
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     cert-manager.io/cluster-issuer: "cloudflare-issuer"
@@ -17,7 +16,7 @@ spec:
               service:
                 name: transmission
                 port:
-                  number: 80
+                  name: http
   tls:
     - hosts:
         - transmission.k8s.home.lex.la
