--- a/manifests/transmission/service.yaml
+++ b/manifests/transmission/service.yaml
@@ -2,11 +2,23 @@ apiVersion: v1
 kind: Service
 metadata:
   name: transmission
-  namespace: default
+  metadata:
+    annotations:
+      metallb.universe.tf/address-pool: transmission-pool
 spec:
+  type: LoadBalancer
   selector:
     app: transmission
   ports:
-    - protocol: TCP
-      port: 80
+    - name: http
+      protocol: TCP
+      port: 9091
       targetPort: 9091
+    - name: torrent-tcp
+      protocol: TCP
+      port: 51413
+      targetPort: 51413
+    - name: torrent-udp
+      protocol: UDP
+      port: 51413
+      targetPort: 51413
