fix(annotations): update MetalLB address pool annotations in Traefik and Transmission service manifests
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/service.yaml
+++ b/manifests/transmission/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: transmission
   annotations:
-    metallb.universe.tf/address-pool: transmission-pool
+    metallb.io/address-pool: transmission-pool
 spec:
   type: LoadBalancer
   selector:
