--- a/manifests/transmission/deploymant.yaml
+++ b/manifests/transmission/deploymant.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: transmission
+          # renovate:ignore
           image: linuxserver/transmission:4.0.6
           ports:
             - containerPort: 9091
