--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -18,6 +18,10 @@ spec:
           image: linuxserver/transmission:4.0.6
           ports:
             - containerPort: 9091
+            - containerPort: 51413
+              protocol: UDP
+            - containerPort: 51413
+              protocol: TCP
           volumeMounts:
             - name: config
               mountPath: /config
