fix(transmission): add names to container ports in statefulset manifest
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -18,10 +18,13 @@ spec:
           image: linuxserver/transmission:4.0.6
           ports:
             - containerPort: 9091
+              name: http
             - containerPort: 51413
               protocol: UDP
+              name: torrent-udp
             - containerPort: 51413
               protocol: TCP
+              name: torrent-tcp
           volumeMounts:
             - name: config
               mountPath: /config
