--- a/manifests/transmission/service.yaml
+++ b/manifests/transmission/service.yaml
@@ -12,12 +12,12 @@ spec:
     - name: http
       protocol: TCP
       port: 9091
-      targetPort: 9091
+      targetPort: http
     - name: torrent-tcp
       protocol: TCP
       port: 51413
-      targetPort: 51413
+      targetPort: torrent-tcp
     - name: torrent-udp
       protocol: UDP
       port: 51413
-      targetPort: 51413
+      targetPort: torrent-udp
