--- a/manifests/homeassistant/statefulset.yaml
+++ b/manifests/homeassistant/statefulset.yaml
@@ -20,7 +20,7 @@ spec:
 
       containers:
         - name: homeassistant
-          image: ghcr.io/home-assistant/home-assistant:stable
+          image: ghcr.io/home-assistant/home-assistant:2025.1.2
           securityContext:
             privileged: true
           env:
