feat(argocd): update Plex application chart name to plex-media-server
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/smarthome/plex.yaml
+++ b/argocd/smarthome/plex.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: plex-system
     server: "https://kubernetes.default.svc"
   sources:
-    - chart: plex
+    - chart: plex-media-server
       repoURL: https://raw.githubusercontent.com/plexinc/pms-docker/gh-pages
       targetRevision: 0.8.0
       helm:
