feat(argocd): update external-dns annotations for Plex and Home Assistant configurations
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/smarthome/plex.yaml
+++ b/argocd/smarthome/plex.yaml
@@ -23,7 +23,7 @@ spec:
             annotations:
               traefik.ingress.kubernetes.io/router.entrypoints: tunnel
 
-              external-dns.alpha.kubernetes.io/hostname: "plex-test.lex.la"
+              external-dns.alpha.kubernetes.io/hostname: "plex.lex.la"
               external-dns.alpha.kubernetes.io/target: "fe8f0ad1-3ace-4f89-b904-ed17fe7e0eeb.cfargotunnel.com"
               external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 
