feat(argocd): add external-dns hostname annotations for Home Assistant and ArgoCD
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/workloads/me-site.yaml
+++ b/argocd/workloads/me-site.yaml
@@ -20,6 +20,7 @@ spec:
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: tunnel
 
+            external-dns.alpha.kubernetes.io/hostname: "aleksei.sviridk.in"
             external-dns.alpha.kubernetes.io/target: "fe8f0ad1-3ace-4f89-b904-ed17fe7e0eeb.cfargotunnel.com"
             external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
           hosts:
