--- a/manifests/homeassistant/ingress.yaml
+++ b/manifests/homeassistant/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: tunnel
 
+    external-dns.alpha.kubernetes.io/hostname: "ha.sviridk.in"
     external-dns.alpha.kubernetes.io/target: "fe8f0ad1-3ace-4f89-b904-ed17fe7e0eeb.cfargotunnel.com"
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
