feat(argocd): update Transmission ingress host URL
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/ingress.yaml
+++ b/manifests/transmission/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     cert-manager.io/cluster-issuer: "cloudflare-issuer"
 spec:
   rules:
-    - host: transmission.k8s.home.lex.la
+    - host: transmission.home.lex.la
       http:
         paths:
           - path: /
