feat(argocd): add sync policy to external-dns configuration
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/externaldns.yaml
+++ b/argocd/infra/externaldns.yaml
@@ -18,6 +18,7 @@ spec:
         valuesObject:
           provider:
             name: cloudflare
+          policy: sync
           env:
             - name: CF_API_TOKEN
               valueFrom:
