feat(argocd): add sources to external-dns configuration for service, ingress, and traefik-proxy
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/external-dns.yaml
+++ b/argocd/infra/external-dns.yaml
@@ -19,6 +19,10 @@ spec:
           provider:
             name: cloudflare
           policy: sync
+          sources:
+            - service
+            - ingress
+            - traefik-proxy
           env:
             - name: CF_API_TOKEN
               valueFrom:
