feat(argocd): add extraArgs to external-dns configuration to disable legacy Traefik support
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/external-dns.yaml
+++ b/argocd/infra/external-dns.yaml
@@ -23,6 +23,8 @@ spec:
             - service
             - ingress
             - traefik-proxy
+          extraArgs:
+            - "–-traefik-disable-legacy"
           env:
             - name: CF_API_TOKEN
               valueFrom:
