fix(argocd): correct syntax for extraArgs to disable legacy Traefik support
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/external-dns.yaml
+++ b/argocd/infra/external-dns.yaml
@@ -24,7 +24,7 @@ spec:
             - ingress
             - traefik-proxy
           extraArgs:
-            - "–traefik-disable-legacy"
+            - "--traefik-disable-legacy"
           env:
             - name: CF_API_TOKEN
               valueFrom:
