fix(argocd): update Cloudflared configuration to use simplified Traefik service URL
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -20,7 +20,7 @@ spec:
           secretName: tunnel-credentials
           tunnelName: k8s-expose
           ingress:
-            - service: http://traefik.traefik-system.svc.k8s.home.lex.la:9090
+            - service: http://traefik.traefik-system.svc:9090
           enableDefault404: false
         replicaCount: 2
   syncPolicy:
