--- a/manifests/homeassistant/statefulset.yaml
+++ b/manifests/homeassistant/statefulset.yaml
@@ -49,6 +49,11 @@ spec:
             limits:
               cpu: "1000m"
               memory: 2Gi
+          livenessProbe:
+            httpGet:
+              path: /static/icons/favicon.ico
+              port: 8123
+            initialDelaySeconds: 30
       volumes:
         - name: ha-config
           configMap:
