fix(homeassistant): correct NFS backup path in statefulset configuration
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/statefulset.yaml
+++ b/manifests/homeassistant/statefulset.yaml
@@ -68,4 +68,4 @@ spec:
         - name: backups
           nfs:
             server: nas.home.lex.la
-            path: nfs/ha-backup
+            path: /nfs/ha-backup
