--- a/argocd/workloads/minecraft.yaml
+++ b/argocd/workloads/minecraft.yaml
@@ -17,6 +17,10 @@ spec:
       valuesObject:
         minecraftServer:
           eula: true
+        serviceAnnotations:
+          external-dns.alpha.kubernetes.io/host: "minecraft.lex.la"
+          external-dns.alpha.kubernetes.io/target: "4a0cf464-58f0-4d24-87cd-e87ad3c0a136.cfargotunnel.com"
+          external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
   project: workloads
   syncPolicy:
     automated:
