--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -21,7 +21,7 @@ spec:
           tunnelName: k8s-expose
           ingress:
             - hostname: minecraft.lex.la
-              service: tcp://minecraft-server.minecraft-server.svc:25565
+              service: tcp://minecraft-minecraft.minecraft-server.svc:25565
             - service: http://traefik.traefik-system.svc:9090
           enableDefault404: false
         replicaCount: 2
