--- a/argocd/workloads/minecraft.yaml
+++ b/argocd/workloads/minecraft.yaml
@@ -19,8 +19,8 @@ spec:
           eula: true
         serviceAnnotations:
           external-dns.alpha.kubernetes.io/hostname: "minecraft.lex.la"
-          external-dns.alpha.kubernetes.io/target: "4a0cf464-58f0-4d24-87cd-e87ad3c0a136.cfargotunnel.com"
-          external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+          external-dns.alpha.kubernetes.io/target: "e438838208f9074e515607a757ae063f27335.id.ui.direct"
+          external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
   project: workloads
   syncPolicy:
     automated:
