fix(mainsail): update server_name in configmap to correct domain
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/mainsail/configmap.yaml
+++ b/manifests/mainsail/configmap.yaml
@@ -6,7 +6,7 @@ data:
   default.conf: |
     server {
         listen 8888;
-        server_name _;
+        server_name mainsail.home.lex.la;  # Указываем правильный домен
 
         root /usr/share/caddy;
         index index.html;
