fix(mainsail): update mountPath for mainsail configuration to point to config.json
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/mainsail/deployment.yaml
+++ b/manifests/mainsail/deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: config
               mountPath: /config
             - name: mainsail-config
-              mountPath: /usr/share/nginx/html/
+              mountPath: /usr/share/nginx/html/config.json
               subPath: config.json
             - name: nginx-config
               mountPath: /etc/nginx/conf.d/default.conf
