fix(mainsail): update ingress configuration to use correct host and secret name
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/mainsail/ingress.yaml
+++ b/manifests/mainsail/ingress.yaml
@@ -19,5 +19,5 @@ spec:
                   number: 8888
   tls:
     - hosts:
-        - transmission.home.lex.la
-      secretName: transmission-tls
+        - mainsail.home.lex.la
+      secretName: mainsail-tls
