fix(mainsail): replace json ConfigMap with new configuration for mainsail
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/mainsail/configmap.yaml
+++ b/manifests/mainsail/configmap.yaml
@@ -15,3 +15,13 @@ data:
 
       include /etc/nginx/extra-conf.d/*.conf;
     }
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mainsail-config
+data:
+  config.json: |
+    {
+      "instancesDB": "browser"
+    }
