--- a/manifests/mainsail/deployment.yaml
+++ b/manifests/mainsail/deployment.yaml
@@ -31,6 +31,22 @@ spec:
             limits:
               cpu: 50m
               memory: 64Mi
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8888
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8888
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
       volumes:
         - name: nginx-config
           configMap:
