chore(traefik): enable allowexternalnameservices in Kubernetes Ingress
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -51,6 +51,7 @@ spec:
                 secretName: traefik-tls-secret
           providers:
             kubernetesIngress:
+              allowexternalnameservices: true
               publishedService:
                 enabled: true
 
