chore(traefik): update Kubernetes Ingress to allow empty and external name services
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -51,7 +51,8 @@ spec:
                 secretName: traefik-tls-secret
           providers:
             kubernetesIngress:
-              allowexternalnameservices: true
+              allowEmptyServices: true
+              allowExternalNameServices: true
               publishedService:
                 enabled: true
 
