chore(csi-driver-nfs): update NFS server and share path in storageClass.yaml
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/csi-driver-nfs/sorageClass.yaml
+++ b/manifests/csi-driver-nfs/sorageClass.yaml
@@ -6,8 +6,8 @@ metadata:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: nas.home.lex.la
-  share: /nfs/k8s
+  server: truenas.home.lex.la
+  share: /mnt/pool/k8s
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
