--- a/manifests/csi-driver-nfs/truenas-sc.yaml
+++ b/manifests/csi-driver-nfs/truenas-sc.yaml
@@ -1,14 +1,22 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nfs-csi
+  name: truenas-nfs-csi
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: nas.home.lex.la
-  share: /nfs/k8s
+  server: truenas.home.lex.la
+  share: /mnt/pool/k8s
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
-  - nolock
+  - nfsvers=4.1
+  - rsize=1048576
+  - wsize=1048576
+  - hard
+  - timeo=600
+  - retrans=2
+  - noresvport
+  - noatime
+  - tcp
